--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -16,6 +16,16 @@ enemies:
   walking_speed: 1.0  
   random_buffs_chance: 1.0
   random_buffs_amounts: 1
+
+  boss_stats:
+    random_buff_chance: 10.0
+    random_buffs_amounts: 1    
+    critical_additional: 0
+    exp_multiplier: 1.0
+    defense_multiplier: 1.0
+    damage_multiplier: 1.0
+    dodge_chance_additional: 0
+    max_hp_multiplier: 1.0
   
   master_monster_stats:
     min_level_required: 100
