--- a/global_server_settings.yaml
+++ b/global_server_settings.yaml
@@ -2,11 +2,8 @@
 version: 1
 PvpDamageNerf: 0.85  # Nerf Damage % or ^ (Depends on which formula used) (PVP)
 PvpDefenseNerf: 0.825  # Nerf Defense % or ^ (Depends on which formula used) (PVP)
-CritMultiplier: 0.0  # Base Crit Dmg % (PVE)
-PenalizeAfkers: false  # Penalize AFkers
-AfkActionsThreshold: 0  # AFK actions threshold before considered botter
-PenalizeAfkActionsThreshold: 0  # Threshold of afk actions before we penalize them
-TimeBetweenAfkFlags: 0.0  # Max time between server afk flags
-BossPetsPerReboot: 0  # Max Boss pets dropped per server reboot
-enemies:
-  random_buff_duration: 3600
+PenalizeAfkers: true  # Penalize AFkers
+AfkActionsThreshold: 150  # AFK actions threshold before considered botter
+PenalizeAfkActionsThreshold: 150  # Threshold of afk actions before we penalize them
+TimeBetweenAfkFlags: 300.0  # Max time between server afk flags
+BossPetsPerReboot: 15  # Max Boss pets dropped per server reboot
