--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -44,31 +44,31 @@ enemies:
     max_hp_multiplier: 5.0
     walking_speed_multiplier: 20.0
     max_aggro_range_multiplier: 2.0
-    
-  attack_modifiers:
-    stun_buff_chance: 0.2
-    stun_time: 5.0
-    apply_dots_chance: 0.1
-    dots_multiplier: 2.0
-    lock_potion_usage_chance: 0.3
-    lock_potion_time: 10.0
-    burn_player_mana_chance: 0.2
-    burn_player_mana_multiplier: 0.5
+
+  attack_modifiers: #tbd
+    stun_buff_chance: 0.2 #tbd
+    stun_time: 5.0 #tbd
+    apply_dots_chance: 0.1 #tbd
+    dots_multiplier: 2.0 #tbd
+    lock_potion_usage_chance: 0.3 #tbd
+    lock_potion_time: 10.0 #tbd
+    burn_player_mana_chance: 0.2 #tbd
+    burn_player_mana_multiplier: 0.5 #tbd
   rewards:
-    drop_more_gold: 1.2
+    drop_more_gold: 1.2 #tbd
     drop_more_exp: 1.3
-    drop_more_items: 1.5
+    drop_more_items: 1.5 #tbd
     drop_more_corrupted_items: 1.8
 
-player:
-  penalties:
-    exp_penalty_on_death:
-      pve: 0.2
-      pvp: 0.5
-    item_downgrade_on_death:
-      chance: 0.1
-      amount: 0.2
+player: #tbd
+  penalties: #tbd
+    exp_penalty_on_death: #tbd
+      pve: 0.2 #tbd
+      pvp: 0.5 #tbd
+    item_downgrade_on_death: #tbd
+      chance: 0.1 #tbd
+      amount: 0.2 #tbd
 
-server_env_damage:
-  multiplier: 0.3
-  power: 50.0
+server_env_damage: #tbd
+  multiplier: 0.3 #tbd
+  power: 50.0 #tbd
