--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -22,29 +22,11 @@ enemies:
   walking_speed: 1.0  
   random_buffs_chance: 50 #1
   random_buffs_amounts: 2 #1
-
-  boss_stats:
-    random_buff_chance: 10.0
-    random_buffs_amounts: 1    
-    critical_additional: 0
-    exp_multiplier: 1.0
-    defense_multiplier: 1.0
-    damage_multiplier: 1.0
-    dodge_chance_additional: 0
-    max_hp_multiplier: 1.0
-  
-  master_monster_stats:
-    min_level_required: 1 #100
-    spawn_chance: 50.0 #1.0
-    critical_additional: 20.0
-    exp_multiplier: 10.0
-    defense_multiplier: 1.5
-    damage_multiplier: 1.5
-    dodge_chance_additional: 20.0
-    max_hp_multiplier: 5.0
-    walking_speed_multiplier: 20.0
-    max_aggro_range_multiplier: 2.0
-
+  rewards:
+    gold_drop_multiplier: 1.0 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+    drop_more_exp: 1.3
+    drop_more_items: 1.5 #tbd
+    drop_more_corrupted_items: 1.8 #tbd
   attack_modifiers: #tbd
     stun_buff_chance: 0.2 #tbd
     stun_time: 5.0 #tbd
@@ -53,12 +35,38 @@ enemies:
     lock_potion_usage_chance: 0.3 #tbd
     lock_potion_time: 10.0 #tbd
     burn_player_mana_chance: 0.2 #tbd
-    burn_player_mana_multiplier: 0.5 #tbd
+    burn_player_mana_multiplier: 0.5 #tbd    
+    
+  boss:
+    random_buff_chance: 10.0
+    random_buffs_amounts: 1    
+    critical_additional: 0
+    defense_multiplier: 1.0
+    damage_multiplier: 1.0
+    dodge_chance_additional: 0
+    max_hp_multiplier: 1.0
   rewards:
-    drop_more_gold: 1.2 #tbd
-    drop_more_exp: 1.3
+    gold_drop_multiplier: 1.0 # Random.Range(1000, 5000 + 1)
+    drop_more_exp: 1.0
     drop_more_items: 1.5 #tbd
-    drop_more_corrupted_items: 1.8
+    drop_more_corrupted_items: 1.8 #tbd
+    
+  elites:
+    min_level_required: 1 #100
+    spawn_chance: 50.0 #1.0
+    critical_additional: 20.0
+    defense_multiplier: 1.5
+    damage_multiplier: 1.5
+    dodge_chance_additional: 20.0
+    max_hp_multiplier: 5.0
+    walking_speed_multiplier: 20.0
+    max_aggro_range_multiplier: 2.0
+  rewards:
+    gold_drop_multiplier: 1.0 # Random.Range(1000, 5000 + 1)
+    drop_more_exp: 10
+    drop_more_items: 1.5 #tbd
+    drop_more_corrupted_items: 1.8 #tbd
+
 
 player: #tbd
   penalties: #tbd
