--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 8
+  version: 9
   id: 1
   name: ServDev1
   is_test_server: true
@@ -22,10 +22,11 @@ enemies:
   walking_speed: 1.0  
   random_buffs_chance: 1 #1
   random_buffs_amounts: 1 #1
+  is_aggro_passive: false
   rewards:
     gold_drop_multiplier: 3 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
     drop_more_exp: 1.3
-    drop_more_items: 1.5 #tbd
+    drop_more_items: 1.5 #1.0
     drop_more_corrupted_items: 1.8 #tbd
   attack_modifiers: #tbd
     stun_buff_chance: 0.2 #tbd
@@ -48,7 +49,7 @@ enemies:
     rewards:
       gold_drop_multiplier: 1.0 # Random.Range(1000, 5000 + 1)
       drop_more_exp: 1.0
-      drop_more_items: 1.5 #tbd
+      drop_more_items: 1.0
       drop_more_corrupted_items: 1.8 #tbd
     
   elites:
@@ -64,7 +65,7 @@ enemies:
     rewards:
       gold_drop_multiplier: 10 # Random.Range(1000, 5000 + 1)
       drop_more_exp: 10
-      drop_more_items: 1.5 #tbd
+      drop_more_items: 1.0
       drop_more_corrupted_items: 1.8 #tbd
 
 
