--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -23,6 +23,7 @@ enemies:
   random_buffs_chance: 1 #1
   random_buffs_amounts: 1 #1
   is_aggro_passive: false
+  corrupted_ench_chance: 5.0
   rewards:
     gold_drop_multiplier: 3 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
     drop_more_exp: 1.3
@@ -50,7 +51,6 @@ enemies:
       gold_drop_multiplier: 1.0 # Random.Range(1000, 5000 + 1)
       drop_more_exp: 1.0
       drop_more_items: 1.0
-      drop_more_corrupted_items: 1.8 #tbd
     
   elites:
     min_level_required: 1 #100
@@ -66,7 +66,6 @@ enemies:
       gold_drop_multiplier: 10 # Random.Range(1000, 5000 + 1)
       drop_more_exp: 10
       drop_more_items: 1.0
-      drop_more_corrupted_items: 1.8 #tbd
 
 
 player: #tbd
