--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 9
+  version: 10
   id: 1
   name: ServDev1
   is_test_server: true
@@ -28,7 +28,6 @@ enemies:
     gold_drop_multiplier: 3 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
     drop_more_exp: 1.3
     drop_more_items: 1.5 #1.0
-    drop_more_corrupted_items: 1.8 #tbd
   attack_modifiers: #tbd
     stun_buff_chance: 0.2 #tbd
     stun_time: 5.0 #tbd
@@ -68,14 +67,14 @@ enemies:
       drop_more_items: 1.0
 
 
-player: #tbd
-  penalties: #tbd
-    exp_penalty_on_death: #tbd
-      pve: 0.2 #tbd
-      pvp: 0.5 #tbd
+player: 
+  penalties: 
+    exp_penalty_on_death: 
+      pve: 25
+      pvp: 0
     item_downgrade_on_death: #tbd
       chance: 0.1 #tbd
-      amount: 0.2 #tbd
+      amount: 1 #tbd
 
 server_env_damage: #tbd
   multiplier: 0.3 #tbd
