--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 1
+  version: 2
   id: 1
   name: ServDev1
   is_test_server: true
@@ -34,17 +34,18 @@ enemies:
       time: 5.0
       cast_chance: 30
     burn:
-      spawn_chance: 100
+      spawn_chance: 10
       time: 10
       cast_chance: 30
+      power: 10 # % of hp over time
     bleed:
-      spawn_chance: 0
-      time: 5.0
-      cast_chance: 3
+      spawn_chance: 50
+      time: 30.0
+      cast_chance: 50
     lock_potion:
-      spawn_chance: 0
+      spawn_chance: 40
       time: 5.0
-      cast_chance: 3
+      cast_chance: 50
     burn_mana:
       spawn_chance: 0
       time: 5.0
