--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 23
+  version: 233
   id: 1
   name: ServDev1
   is_test_server: true
@@ -39,27 +39,22 @@ enemies:
       cast_chance: 30
       power: 10 # % of hp over time
     bleed:
-      spawn_chance: 50
+      spawn_chance: 0
       time: 30.0
       cast_chance: 50
       power: 10 # % of hp over time
     lock_potion:
-      spawn_chance: 50
+      spawn_chance: 33
       time: 10
       cast_chance: 50
-    burn_mana:
-      spawn_chance: 0
-      time: 5.0
-      cast_chance: 3
-      power: 10 # % of hp over time
     slow:
-      spawn_chance: 0
+      spawn_chance: 33
+      time: 15.0
+      cast_chance: 50
+    confusion:
+      spawn_chance: 34
       time: 5.0
-      cast_chance: 3
-    fear:
-      spawn_chance: 0
-      time: 5.0
-      cast_chance: 3
+      cast_chance: 50
     
       
     
