--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -29,10 +29,6 @@ enemies:
     drop_more_exp: 1.3
     drop_more_items: 10 #1.0
   attack_modifiers:
-    stun:
-      spawn_chance: 0
-      time: 5.0
-      cast_chance: 30
     burn:
       spawn_chance: 0
       time: 10
@@ -43,12 +39,26 @@ enemies:
       time: 30.0
       cast_chance: 50
       power: 10 # % of hp over time
+    poison:
+      spawn_chance: 50
+      time: 30.0
+      cast_chance: 50
+      power: 50 # % of hp over time
+    aoe_poison:
+      spawn_chance: 50
+      time: 30.0
+      cast_chance: 50
+      power: 50 # % of hp over time
+    stun:
+      spawn_chance: 0
+      time: 5.0
+      cast_chance: 30
     lock_potion:
       spawn_chance: 0
       time: 10
       cast_chance: 50
     slow:
-      spawn_chance: 100
+      spawn_chance: 0
       time: 1
       cast_chance: 50
     confusion:
