--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 12
+  version: 123
   id: 1
   name: ServDev1
   is_test_server: true
@@ -23,11 +23,21 @@ enemies:
   random_buffs_chance: 1 #1
   random_buffs_amounts: 1 #1
   is_aggro_passive: false
-  corrupted_ench_chance: 50 #5
+  corrupted_ench_chance: 50 #5 
   rewards:
     gold_drop_multiplier: 3 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
     drop_more_exp: 1.3
     drop_more_items: 10 #1.0
+    new_item:
+      RNG_mod: true
+      mod_extra_luck: 0.0
+      guaranteed_mods_number: 0
+      RNG_upgrade: false
+      upgrade_extra_luck: 0.0
+      RNG_enchant: true
+      enchant_extra_luck: 0.0
+      RNG_quality: true
+      quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   attack_modifiers:
     burn:
       spawn_chance: 0
@@ -64,10 +74,7 @@ enemies:
     confusion:
       spawn_chance: 0
       time: 5.0
-      cast_chance: 50
-    
-      
-    
+      cast_chance: 50 
   boss:
     random_buff_chance: 10.0
     random_buffs_amounts: 1    
@@ -80,7 +87,16 @@ enemies:
       gold_drop_multiplier: 1.0 # Random.Range(1000, 5000 + 1)
       drop_more_exp: 1.0
       drop_more_items: 1.0
-    
+      new_item:
+        RNG_mod: true
+        mod_extra_luck: 0.0
+        guaranteed_mods_number: 0
+        RNG_upgrade: false
+        upgrade_extra_luck: 0.0
+        RNG_enchant: true
+        enchant_extra_luck: 0.0
+        RNG_quality: true
+        quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   elites:
     min_level_required: 1 #100
     spawn_chance: 50.0 #1.0
@@ -95,7 +111,17 @@ enemies:
       gold_drop_multiplier: 10 # Random.Range(1000, 5000 + 1)
       drop_more_exp: 10
       drop_more_items: 1.0
-
+      new_item:
+        RNG_mod: true
+        mod_extra_luck: 100
+        guaranteed_mods_number: 3
+        RNG_upgrade: true
+        upgrade_extra_luck: 100
+        RNG_enchant: true
+        enchant_extra_luck: 100
+        RNG_quality: true
+        quality_extra_luck: 50000 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
+        
 player: 
   penalties: 
     exp_penalty_on_death: 
