--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 123
+  version: 1
   id: 1
   name: ServDev1
   is_test_server: true
@@ -27,7 +27,7 @@ enemies:
   rewards:
     gold_drop_multiplier: 3 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
     drop_more_exp: 1.3
-    drop_more_items: 10 #1.0
+    drop_more_items: 2 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
     new_item:
       RNG_mod: true
       mod_extra_luck: 0.0
@@ -108,9 +108,9 @@ enemies:
     walking_speed_multiplier: 1.5
     max_aggro_range_multiplier: 2.0
     rewards:
-      gold_drop_multiplier: 10 # Random.Range(1000, 5000 + 1)
+      gold_drop_multiplier: 10 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 10
-      drop_more_items: 1.0
+      drop_more_items: 2 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
       new_item:
         RNG_mod: true
         mod_extra_luck: 100
