--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,10 +1,10 @@
 server:
-  version: 33
+  version: 1
   id: 1
   name: ServDev1
   is_test_server: true
-  auto_restart: 86400
-  type: Normal
+  auto_restart: 172800
+  type: Hard
   pvp:
     enabled: false
     gvg_event:
@@ -17,127 +17,128 @@ player:
   penalties: 
     exp_penalty_on_death: 
       pve:
-        chance: 10
-        amount: 5
+        chance: 25
+        amount: 15
       pvp:
-        chance: 3
-        amount: 0
+        chance: 25
+        amount: 15
   
 enemies:
+  is_aggro_passive: false
+  hp_regen: 1.4
+  attack_speed_wait_multiplier: 0.6 #wait more if higher
+  walking_speed: 1.35    
+  corrupted_ench_chance: 15 #5 
   boss_upgrade:
     max_in_bosses_open_world: 3
     chance: 100
     spawn_cool_down_mins: 60 # can only happen every x minutes
-  atk_buff: 1.0
-  max_hp_multiplier: 1.1 #1
-  more_defense: 1 #1
-  hp_regen: 2.5
-  dodge_chance_additional_percentage: 0
-  critical_chance_additional_percentage: 0
-  attack_speed_wait_multiplier: 1.0 #wait more if higher
-  walking_speed: 1.0  
-  random_buffs_chance: 1 #1
-  random_buffs_amounts: 1 #1
-  is_aggro_passive: false
-  corrupted_ench_chance: 50 #5 
+  # general stats
+  random_buffs_chance: 80 #1
+  random_buffs_amounts: 4 #1
+  dodge_chance_additional_percentage: 30.0
+  critical_chance_additional_percentage: 30.0
+  defense_multiplier: 2.0
+  damage_multiplier: 1.9
+  max_hp_multiplier: 2.5 #1  
   rewards:
-    gold_drop_multiplier: 3 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-    drop_more_exp: 1.3
-    drop_more_items: 2.0 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
-    extra_material: 1 # added to the result and after server event
+    gold_drop_multiplier: 2.25 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+    drop_more_exp: 2.25
+    drop_more_items: 2.75 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+    extra_material: 2 # added to the result and after server event
     new_item:
       RNG_mod: true
-      mod_extra_luck: 0.0
-      guaranteed_mods_number: 0
-      RNG_upgrade: false
-      upgrade_extra_luck: 0.0
+      mod_extra_luck: 5.55
+      guaranteed_mods_number: 3
+      RNG_upgrade: true
+      upgrade_extra_luck: 5
       RNG_enchant: true
-      enchant_extra_luck: 0.0
+      enchant_extra_luck: 40
       RNG_quality: true
       quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   attack_modifiers:
     burn:
-      spawn_chance: 0
-      time: 10
-      cast_chance: 30
-      power: 10 # % of hp over time
+      spawn_chance: 15
+      time: 3
+      cast_chance: 20
+      power: 20 # % of hp over time
     bleed:
-      spawn_chance: 0
-      time: 30.0
-      cast_chance: 50
-      power: 10 # % of hp over time
+      spawn_chance: 15
+      time: 10.0
+      cast_chance: 20
+      power: 80 # % of hp over time
     poison:
-      spawn_chance: 0
+      spawn_chance: 15
       time: 30.0
-      cast_chance: 50
+      cast_chance: 20
       power: 50 # % of hp over time
     aoe_poison:
-      spawn_chance: 100
+      spawn_chance: 15
       time: 15
-      cast_chance: 50
+      cast_chance: 20
       power: 100 # % of hp over time
     stun:
-      spawn_chance: 0
+      spawn_chance: 15
       time: 5.0
-      cast_chance: 30
+      cast_chance: 20
     lock_potion:
-      spawn_chance: 0
+      spawn_chance: 15
       time: 10
-      cast_chance: 50
+      cast_chance: 20
     slow:
-      spawn_chance: 0
-      time: 1
-      cast_chance: 50
+      spawn_chance: 15
+      time: 5
+      cast_chance: 20
     confusion:
-      spawn_chance: 0
+      spawn_chance: 15
       time: 5.0
-      cast_chance: 50 
+      cast_chance: 20 
   boss:
-    random_buff_chance: 10.0
-    random_buffs_amounts: 1    
-    critical_additional: 0
-    defense_multiplier: 1.0
-    damage_multiplier: 1.0
-    dodge_chance_additional: 0
-    max_hp_multiplier: 1.0
+    random_buffs_chance: 80 #1
+    random_buffs_amounts: 4 #1  
+    critical_chance_additional_percentage: 30.0
+    dodge_chance_additional_percentage: 30.0
+    defense_multiplier: 2.0
+    damage_multiplier: 1.9
+    max_hp_multiplier: 2.5    
     rewards:
-      gold_drop_multiplier: 1.0 # Random.Range(1000, 5000 + 1)
-      drop_more_exp: 1.0
-      drop_more_items: 1.0 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
-      extra_material: 1 # added to the result and after server event
+      gold_drop_multiplier: 10
+      drop_more_exp: 2.25
+      drop_more_items: 2.75 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+      extra_material: 2 # added to the result and after server event
       new_item:
         RNG_mod: true
-        mod_extra_luck: 0.0
-        guaranteed_mods_number: 0
-        RNG_upgrade: false
-        upgrade_extra_luck: 0.0
+        mod_extra_luck: 5.55
+        guaranteed_mods_number: 3
+        RNG_upgrade: true
+        upgrade_extra_luck: 5
         RNG_enchant: true
-        enchant_extra_luck: 0.0
+        enchant_extra_luck: 40
         RNG_quality: true
         quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   elites:
     min_level_required: 1 #100
-    spawn_chance: 50.0 #1.0
-    critical_additional: 20.0
-    defense_multiplier: 1.5
-    damage_multiplier: 1.5
-    dodge_chance_additional: 20.0
-    max_hp_multiplier: 5.0
-    walking_speed_multiplier: 1.5
+    spawn_chance: 10.0 #1.0
+    critical_chance_additional_percentage: 30.0
+    dodge_chance_additional_percentage: 30.0
+    defense_multiplier: 2.0
+    damage_multiplier: 1.9
+    max_hp_multiplier: 2.5
+    walking_speed_multiplier: 1.65
     max_aggro_range_multiplier: 2.0
     rewards:
-      gold_drop_multiplier: 10 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-      drop_more_exp: 10
-      drop_more_items: 2.0 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
-      extra_material: 1 # added to the result and after server event
+      gold_drop_multiplier: 5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+      drop_more_exp: 2.25
+      drop_more_items: 2.75 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+      extra_material: 2 # added to the result and after server event
       new_item:
         RNG_mod: true
-        mod_extra_luck: 100
+        mod_extra_luck: 5.55
         guaranteed_mods_number: 3
         RNG_upgrade: true
-        upgrade_extra_luck: 100
+        upgrade_extra_luck: 5
         RNG_enchant: true
-        enchant_extra_luck: 100
+        enchant_extra_luck: 40
         RNG_quality: true
-        quality_extra_luck: 50000 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
+        quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
         
