--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -38,9 +38,9 @@ enemies:
   random_buffs_amounts: 4 #1
   dodge_chance_additional_percentage: 30.0
   critical_chance_additional_percentage: 30.0
-  defense_multiplier: 2.0
-  damage_multiplier: 1.9
-  max_hp_multiplier: 2.5 #1  
+  defense_multiplier: 8.0
+  damage_multiplier: 5.0
+  max_hp_multiplier: 5.0
   rewards:
     gold_drop_multiplier: 2.25 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
     drop_more_exp: 2.25
@@ -59,40 +59,40 @@ enemies:
   attack_modifiers:
     burn:
       spawn_chance: 15
-      time: 3
+      time: 10.0
       cast_chance: 20
-      power: 20 # % of hp over time
+      power: 3 # x times the monster normal hit before applying player defenses
     bleed:
       spawn_chance: 15
       time: 10.0
       cast_chance: 20
-      power: 80 # % of hp over time
+      power: 5 # x times the monster normal hit before applying player defenses
     poison:
       spawn_chance: 15
-      time: 30.0
+      time: 10.0
       cast_chance: 20
-      power: 50 # % of hp over time
+      power: 7 # x times the monster hit before applying player defenses
     aoe_poison:
       spawn_chance: 15
-      time: 15
+      time: 10.0
       cast_chance: 20
-      power: 100 # % of hp over time
+      power: 10 # x times the monster hit before applying player defenses
     stun:
-      spawn_chance: 15
+      spawn_chance: 2.0
       time: 5.0
-      cast_chance: 20
+      cast_chance: 20.0
     lock_potion:
-      spawn_chance: 15
-      time: 10
-      cast_chance: 20
+      spawn_chance: 5.0
+      time: 10.0
+      cast_chance: 20.0
     slow:
-      spawn_chance: 15
-      time: 5
-      cast_chance: 20
-    confusion:
-      spawn_chance: 15
+      spawn_chance: 3.0
       time: 5.0
-      cast_chance: 20 
+      cast_chance: 20.0
+    confusion:
+      spawn_chance: 1.0
+      time: 5.0
+      cast_chance: 20.0
   boss:
     random_buffs_chance: 80 #1
     random_buffs_amounts: 4 #1  
@@ -100,7 +100,7 @@ enemies:
     dodge_chance_additional_percentage: 30.0
     defense_multiplier: 2.0
     damage_multiplier: 1.9
-    max_hp_multiplier: 2.5    
+    max_hp_multiplier: 2.5
     rewards:
       gold_drop_multiplier: 10
       drop_more_exp: 2.25
