--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,12 +1,12 @@
 server:
-  version: 22
+  version: 223
   id: 1
   name: ServDev1
   is_test_server: true
   auto_restart: 172800
   type: Terror
   pvp:
-    enabled: false
+    enabled: true
     gvg_event:
       enabled: false
       use_even_time: false
@@ -119,10 +119,10 @@ enemies:
   elites:
     min_level_required: 1 #100
     spawn_chance: 10.0 #1.0
-    critical_chance_additional_percentage: 30.0
-    dodge_chance_additional_percentage: 30.0
-    defense_multiplier: 2.0
-    damage_multiplier: 1.9
+    critical_chance_additional_percentage: 15
+    dodge_chance_additional_percentage: 15
+    defense_multiplier: 1.5
+    damage_multiplier: 1.3
     max_hp_multiplier: 2.5
     walking_speed_multiplier: 1.65
     max_aggro_range_multiplier: 2.0
