--- a/ServDev2.yaml
+++ b/ServDev2.yaml
@@ -1,10 +1,10 @@
 server:
   version: 1
-  id: 1
+  id: 2
   name: ServDev2
   is_test_server: true
   auto_restart: 172800
-  type: Terror
+  type: Hard
   pvp:
     enabled: true
     gvg_event:
@@ -17,128 +17,129 @@ player:
   penalties: 
     exp_penalty_on_death: 
       pve:
-        chance: 25
-        amount: 15
+        chance: 5.0
+        amount: 5.0
       pvp:
-        chance: 25
-        amount: 15
+        chance: 0
+        amount: 0
   
 enemies:
-  is_aggro_passive: false
-  hp_regen: 1.4
-  attack_speed_wait_multiplier: 0.6 #wait more if higher
-  walking_speed: 1.35    
-  corrupted_ench_chance: 15 #5 
+  is_aggro_passive: true
+  hp_regen_per_cycle_percentage: 15 # percentage of max_hp regens every hp_regen_cycle_time
+  hp_regen_cycle_time: 10.0 # hp regen happens every hp_regen_cycle_time
+  attack_speed_wait_multiplier: 0.9 #wait more if higher
+  walking_speed: 1.1
+  corrupted_ench_chance: 10 #5 
   boss_upgrade:
-    max_in_bosses_open_world: 3
-    chance: 100
+    max_in_bosses_open_world: 1
+    chance: 10
     spawn_cool_down_mins: 60 # can only happen every x minutes
   # general stats
-  random_buffs_chance: 80 #1
-  random_buffs_amounts: 4 #1
-  dodge_chance_additional_percentage: 30.0
-  critical_chance_additional_percentage: 30.0
-  defense_multiplier: 8.0
-  damage_multiplier: 5.0
-  max_hp_multiplier: 5.0
+  random_buffs_chance: 10 #1
+  random_buffs_amounts: 1 #1
+  dodge_chance_additional_percentage: 5.0
+  critical_chance_additional_percentage: 5.0
+  defense_multiplier: 1.25
+  damage_multiplier: 1.375
+  max_hp_multiplier: 2.0
   rewards:
-    gold_drop_multiplier: 2.25 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-    drop_more_exp: 2.25
-    drop_more_items: 2.75 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
-    extra_material: 2 # added to the result and after server event
+    gold_drop_multiplier: 1.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+    drop_more_exp: 1.5
+    drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+    extra_material: 1 # added to the result and after server event
     new_item:
       RNG_mod: true
-      mod_extra_luck: 5.55
-      guaranteed_mods_number: 3
+      mod_extra_luck: 10
+      guaranteed_mods_number: 1
       RNG_upgrade: true
-      upgrade_extra_luck: 5
+      upgrade_extra_luck: 10.0
       RNG_enchant: true
-      enchant_extra_luck: 40
+      enchant_extra_luck: 0.0
       RNG_quality: true
       quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   attack_modifiers:
     burn:
-      spawn_chance: 15
+      spawn_chance: -1
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster normal hit before applying player defenses
     bleed:
-      spawn_chance: 15
+      spawn_chance: -1
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster normal hit before applying player defenses
     poison:
-      spawn_chance: 15
+      spawn_chance: -1
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster hit before applying player defenses
     aoe_poison:
-      spawn_chance: 15
+      spawn_chance: -1
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster hit before applying player defenses
     stun:
-      spawn_chance: 2.0
+      spawn_chance: -1
       time: 5.0
       cast_chance: 20.0
     lock_potion:
-      spawn_chance: 5.0
+      spawn_chance: -1
       time: 10.0
       cast_chance: 20.0
     slow:
-      spawn_chance: 3.0
+      spawn_chance: -1
       time: 5.0
       cast_chance: 20.0
     confusion:
-      spawn_chance: 1.0
+      spawn_chance: -1
       time: 5.0
       cast_chance: 20.0
   boss:
-    random_buffs_chance: 80 #1
-    random_buffs_amounts: 4 #1  
-    critical_chance_additional_percentage: 30.0
-    dodge_chance_additional_percentage: 30.0
-    defense_multiplier: 2.0
-    damage_multiplier: 1.9
-    max_hp_multiplier: 2.5
+    random_buffs_chance: 30 #1
+    random_buffs_amounts: 1 #1
+    critical_chance_additional_percentage: 15.0
+    dodge_chance_additional_percentage: 10.0
+    defense_multiplier: 1.25
+    damage_multiplier: 1.375
+    max_hp_multiplier: 2.0
     rewards:
-      gold_drop_multiplier: 10
-      drop_more_exp: 2.25
-      drop_more_items: 2.75 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
-      extra_material: 2 # added to the result and after server event
+      gold_drop_multiplier: 1.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+      drop_more_exp: 1.5
+      drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+      extra_material: 1 # added to the result and after server event
       new_item:
         RNG_mod: true
-        mod_extra_luck: 5.55
-        guaranteed_mods_number: 3
+        mod_extra_luck: 10
+        guaranteed_mods_number: 1
         RNG_upgrade: true
-        upgrade_extra_luck: 5
+        upgrade_extra_luck: 10.0
         RNG_enchant: true
-        enchant_extra_luck: 40
+        enchant_extra_luck: 0.0
         RNG_quality: true
         quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   elites:
-    min_level_required: 1 #100
+    min_level_required: 100 #100
     spawn_chance: 10.0 #1.0
-    critical_chance_additional_percentage: 15
-    dodge_chance_additional_percentage: 15
+    walking_speed_multiplier: 1.0
+    max_aggro_range_multiplier: 1.0
+    critical_chance_additional_percentage: 0.0
+    dodge_chance_additional_percentage: 0.0
     defense_multiplier: 1.5
-    damage_multiplier: 1.3
-    max_hp_multiplier: 2.5
-    walking_speed_multiplier: 1.65
-    max_aggro_range_multiplier: 2.0
+    damage_multiplier: 1.5
+    max_hp_multiplier: 3.0
     rewards:
-      gold_drop_multiplier: 5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-      drop_more_exp: 2.25
-      drop_more_items: 2.75 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+      gold_drop_multiplier: 2.0 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+      drop_more_exp: 3.5
+      drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
       extra_material: 2 # added to the result and after server event
       new_item:
         RNG_mod: true
-        mod_extra_luck: 5.55
-        guaranteed_mods_number: 3
+        mod_extra_luck: 15
+        guaranteed_mods_number: 2
         RNG_upgrade: true
-        upgrade_extra_luck: 5
+        upgrade_extra_luck: 15.0
         RNG_enchant: true
-        enchant_extra_luck: 40
+        enchant_extra_luck: 10.0
         RNG_quality: true
         quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
         
