--- a/ServDev2.yaml
+++ b/ServDev2.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 1
+  version: 12
   id: 2
   name: ServDev2
   is_test_server: true
@@ -24,7 +24,7 @@ player:
         amount: 0
   
 enemies:
-  is_aggro_passive: true
+  is_aggro_passive: false
   hp_regen_per_cycle_percentage: 15 # percentage of max_hp regens every hp_regen_cycle_time
   hp_regen_cycle_time: 10.0 # hp regen happens every hp_regen_cycle_time
   attack_speed_wait_multiplier: 0.9 #wait more if higher
@@ -125,7 +125,7 @@ enemies:
     critical_chance_additional_percentage: 0.0
     dodge_chance_additional_percentage: 0.0
     defense_multiplier: 1.5
-    damage_multiplier: 1.5
+    damage_multiplier: 1.1
     max_hp_multiplier: 3.0
     rewards:
       gold_drop_multiplier: 2.0 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
