--- a/ServNight1.yaml
+++ b/ServNight1.yaml
@@ -1,7 +1,7 @@
 server:
-  version: 3
+  version: 1
   id: 3
-  name: ServDev3
+  name: ServNight1
   is_test_server: true
   auto_restart: 172800
   type: Nightmare
@@ -85,7 +85,7 @@ enemies:
       max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
       gold_drop_multiplier: 2.0 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-      drop_more_exp: 2.5
+      drop_more_exp: 2.1
       drop_more_items: 1.25 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
       extra_material: 2 # added to the result and after server event
       new_item:
@@ -118,7 +118,7 @@ enemies:
       max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
       gold_drop_multiplier: 3.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-      drop_more_exp: 3.5
+      drop_more_exp: 2.1
       drop_more_items: 1.20 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
       extra_material: 2 # added to the result and after server event
       new_item:
