--- a/ServNorm1.yaml
+++ b/ServNorm1.yaml
@@ -2,7 +2,7 @@ server:
   version: 1
   id: 1
   name: ServNormal1
-  is_test_server: true
+  is_test_server: false
   auto_restart: 172800
   type: Normal
   pvp:
