--- a/ServHard1.yaml
+++ b/ServHard1.yaml
@@ -1,12 +1,12 @@
 server:
-  version: 2
+  version: 3
   id: 2
   name: ServHard1
   is_test_server: false
   auto_restart: 172800
   type: Hard
   pvp:
-    enabled: true
+    enabled: false
     gvg_event:
       enabled: false
       use_even_time: false
