--- a/ServNight1.yaml
+++ b/ServNight1.yaml
@@ -1,9 +1,10 @@
 server:
-  version: 8
+  version: 1
   id: 3
   name: ServNight1
   is_test_server: false
   auto_restart: 28400
+  player_limit: 30
   type: Nightmare
   pvp:
     enabled: true
