--- a/ServNorm1.yaml
+++ b/ServNorm1.yaml
@@ -1,9 +1,10 @@
 server:
-  version: 8
+  version: 1
   id: 1
-  name: ServNormal1
+  name: ServNorm1
   is_test_server: false
   auto_restart: 28000
+  player_limit: 30
   type: Normal
   pvp:
     enabled: false
