gold drop chance

--- a/ServHard1.yaml
+++ b/ServHard1.yaml
@@ -85,6 +85,7 @@ enemies:
       spawn_chance: 0 #only elites use this so far
       max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
+      gold_drop_chance: 90.0
       gold_drop_multiplier: 1.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 1.3
       drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
@@ -118,6 +119,7 @@ enemies:
       spawn_chance: 0 #only elites use this so far
       max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
+      gold_drop_chance: 90.0
       gold_drop_multiplier: 1.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 1.3
       drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
@@ -151,6 +153,7 @@ enemies:
       spawn_chance: 10.0 #only elites use this so far
       max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
+      gold_drop_chance: 90.0
       gold_drop_multiplier: 2.0 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 2.6
       drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
