--- a/ServDev1.yaml
+++ b/ServDev1.yaml
@@ -1,9 +1,9 @@
 server:
-  version: 174
+  version: 1
   id: 1
-  name: ServNorm1
-  is_test_server: false
-  auto_restart: 28000
+  name: ServDev1
+  is_test_server: true
+  auto_restart: 280000
   player_limit: 50
   type: Normal
   pvp:
