--- a/ServDev3.yaml
+++ b/ServDev3.yaml
@@ -1,9 +1,9 @@
 server:
   version: 1
   id: 3
-  name: ServNight1
-  is_test_server: false
-  auto_restart: 28400
+  name: ServDev3
+  is_test_server: true
+  auto_restart: 284000
   player_limit: 30
   type: Nightmare
   pvp:
