--- a/ServHard1.yaml
+++ b/ServHard1.yaml
@@ -7,7 +7,7 @@ server:
   player_limit: 40
   type: Hard
   pvp:
-    enabled: false
+    enabled: true
     gvg_event:
       enabled: false
       use_even_time: false
