--- a/live/ServNight1.yaml
+++ b/live/ServNight1.yaml
@@ -5,6 +5,7 @@ server:
   is_test_server: false
   auto_restart: 28400
   player_limit: 40
+  player_rebirth_required: 20
   type: Nightmare
   pvp:
     enabled: true
