--- a/live/ServNorm2.yaml
+++ b/live/ServNorm2.yaml
@@ -5,6 +5,7 @@ server:
   is_test_server: false
   auto_restart: 28000
   player_limit: 50
+  player_rebirth_required: 0
   type: Normal
   pvp:
     enabled: false
