--- a/live/ServTerror1.yaml
+++ b/live/ServTerror1.yaml
@@ -5,6 +5,7 @@ server:
   is_test_server: false
   auto_restart: 28800
   player_limit: 40
+  player_rebirth_required: 30
   type: Terror
   pvp:
     enabled: true
