--- a/live/ServNight1.yaml
+++ b/live/ServNight1.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 1
+  version: 19
   id: 3
   name: ServNight1
   is_test_server: false
@@ -7,6 +7,17 @@ server:
   player_limit: 40
   player_rebirth_required: 20
   type: Nightmare
+  intance_details:
+    allow_instance_request: true
+    is_intance: false
+    time_to_complete: 500
+    time_to_first_player: 400
+    map: openworld
+    base_tier_scaling_multiplier: 0.0 # Defense_str, Defense_int, Damage_str, Damage_int are multiplied by this and tier
+    critical_chance_per_tier: 0.0 # multiplied by tier and added
+    dodge_chance_per_tier: 0.0 # multiplied by tier and added
+    hp_regen_per_tier: 0.0 # multiplied by tier and added
+    max_hp_tier_scaling_multiplier: 0.0 # MaxHP multiplied by this and tier
   pvp:
     enabled: true
     gvg_event:
