--- a/dev/global_server_settings.yaml
+++ b/dev/global_server_settings.yaml
@@ -1,5 +1,5 @@
 ---
-version: 4
+version: 5
 PvpDamageNerf: 0.85  # Nerf Damage % or ^ (Depends on which formula used) (PVP)
 PvpDefenseNerf: 0.825  # Nerf Defense % or ^ (Depends on which formula used) (PVP)
 aat: 150 
@@ -10,3 +10,4 @@ MaxWallJumpDistance: 0.8
 PenaltyPerRebirth: 0.15
 MaxGuildMembers: 30
 InstanceRequestCD: 120
+pvp_gold_required: 100000 #needs to be the same on the client side
