--- a/dev/events.yaml
+++ b/dev/events.yaml
@@ -2,7 +2,7 @@
 # The top-level key (e.g., new_years_2025) is a unique name for the event group.
 # It is used for organization and logging but not directly in game logic.
 # The startUTC/endUTC schedule applies to ALL effects listed within the group.
-
+version: 1
 event_groups:
   new_years_celebration_2025:
     description: "Ringing in the new year with bonuses!"
