--- a/dev/global_client_settings.yaml
+++ b/dev/global_client_settings.yaml
@@ -1,4 +1,4 @@
-version: 5
+version: 4
 admin_team:
   chat:
     text_color: red
@@ -7,23 +7,21 @@ admin_team:
   members:
     - admin
     - alkanov
-    - zelp
     - mod1
+    - uragus
 mod_team:
   chat:
     text_color: "#ff8000"
     icon_set: skill_iconset
     index: 101
   members:
-    - alkanov1
+    - InGameMod01
+    - InGameMod02
 tutor_team:
   chat:
     text_color: "#e6cc80"
     icon_set: skill_iconset
     index: 109
   members:
-    - uragus
-    - meeks
-    - shotgun
-    - bonet
-pvp_gold_required: 100000 #needs to be the same on server side
+    - alkanov
+pvp_gold_required: 100000 #needs to be the same on the server side
